# HyperionEngine

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  PLAN_DOC_SYNC.md  PROJECT_ARCHITECTURE.md  hyperion-engine-v2.1-revisione-critica.docx  hyperion-engine-v2.1-revisione-critica.md  hyperion-masterplan.md
.claude/: settings.json
.claude/agents/: physics-integration-checker.md  protocol-sync-checker.md  wgsl-validator.md
crates/hyperion-core/: Cargo.toml
crates/hyperion-core/src/: command_processor.rs  components.rs  engine.rs  lib.rs  physics.rs  physics_commands.rs  render_state.rs  ring_buffer.rs  systems.rs
crates/loro-spike/: Cargo.toml
crates/loro-spike/src/: lib.rs
crates/rapier-spike/: Cargo.toml
docs/: deployment-guide.md
docs/plans/: 2026-02-17-hyperion-engine-design.md  2026-02-17-hyperion-engine-phase0-phase1.md  2026-02-17-hyperion-engine-phase2.md  2026-02-17-hyperion-engine-phase3.md  2026-02-17-hyperion-engine-phase4.md  2026-02-18-phase-4.5-stabilization-arch-foundations.md  2026-02-20-phase-5.5-rendering-primitives.md  2026-02-20-phase5-typescript-api-lifecycle.md  2026-02-20-post-plan-integration-wiring.md  2026-02-21-phase-6-input-system.md  2026-02-21-phase-7-audio-system.md  2026-02-21-phase-7.5-stability-bugfix-design.md  2026-02-21-phase-7.5-stability-bugfix.md  2026-02-22-phase-8-polish-dx.md  2026-02-22-phase-9-advanced-2d-rendering.md  2026-02-24-phase10-asset-pipeline-design.md  2026-02-24-phase10-asset-pipeline-plan.md  2026-02-26-phase10-dx-plan.md  (+27 more)
ts/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+188 files in other folders)
