[package]
name = "hyperion-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dev-tools = []
physics-2d = ["dep:rapier2d"]

[dependencies]
wasm-bindgen = "0.2"
glam = { version = "0.29", features = ["bytemuck"] }
hecs = "0.11"
bytemuck = { version = "1", features = ["derive"] }
rapier2d = { version = "0.32", features = ["simd-stable"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
