[package]
name = "loro-spike"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
loro = "1"

# Note: profile.release is defined at workspace root (Cargo.toml).
# For size-optimized spike builds, the workspace uses opt-level=3 + lto=fat + codegen-units=1.
# wasm-pack --release applies these settings.
